@@ -524,3 +524,8 @@ td.tabspacer {
     vertical-align:middle;
     white-space:nowrap;
 }
+
+.shortdesc {
+    text-align: left;
+    font-weight: bold;
+}
