@@ -13,7 +13,7 @@ includeTemplate('photo.footer.tpl');
 ?>
       <table width="100%" cellspacing="0" cellpadding="0" class="modfooter">
         <tr>
-          <td valign="top">
+          <td valign="top" align="<?php echo langLeft(); ?>">
             <!-- The Gallery code version number, linked to the Gallery home page -->
             <span class="fineprint">
 	    <?php print poweredBy() ?>
